Fix JVM option error - remove deprecated UseCGroupMemoryLimitForHeap option